feat: add comprehensive test suite with 169 tests
- Add 169 comprehensive tests (unit, integration, E2E)
- Create test infrastructure with utilities and helpers
- Add testing documentation guide
- Update OpenSpec with testing capability spec
- Expand from 11 to 169 tests (1436% increase)

Tests cover:
- Client: reconnection, typed requests, validation (40 tests)
- Server: handlers, responses, Elysia integration (23 tests)
- Shared: protocol, serialization, schemas, utils (70 tests)
- Integration: connection flows, reconnection, messaging (18 tests)
- E2E: ping-pong scenarios, authentication flows (13 tests)

All tests passing. Ready for v1.2.0 release.

--- a/docs/src/pages/guides.mdx
+++ b/docs/src/pages/guides.mdx
@@ -50,6 +50,16 @@ Understand how runtime validation works.
 - Error messages
 - Performance considerations
 
+### [Testing](/wsx/guides/testing)
+
+Learn how to test applications built with @mdrv/wsx.
+
+- Test utilities and helpers
+- Unit testing strategies
+- Integration testing patterns
+- E2E testing workflows
+- Best practices
+
 ## Getting Help
 
 - [API Reference](/wsx/api) - Complete API documentation
