docs: fix import paths and styling issues
- Remove /v001 from all import paths (now @mdrv/wsx/client, /server, /shared)
- Add subpath exports to package.json for client, server, and shared modules
- Fix code block styling in Exponential Backoff section (add 'text' language)
- Update README.md with correct import paths

--- a/docs/src/pages/api.mdx
+++ b/docs/src/pages/api.mdx
@@ -33,14 +33,14 @@ Complete API documentation for @mdrv/wsx.
 
 The library is organized into three main modules:
 
-### `@mdrv/wsx/v001/client`
+### `@mdrv/wsx/client`
 
 Browser and Bun client implementation with auto-reconnect and type-safe messaging.
 
-### `@mdrv/wsx/v001/server`
+### `@mdrv/wsx/server`
 
 Server-side implementation with Elysia framework adapter.
 
-### `@mdrv/wsx/v001/shared`
+### `@mdrv/wsx/shared`
 
 Common types, protocol definition, and utilities used by both client and server.
