--- a/docs/src/pages/guides/reconnection.mdx
+++ b/docs/src/pages/guides/reconnection.mdx
@@ -69,7 +69,7 @@ const client = createClient(url, events, {
 
 Delays grow exponentially between retries:
 
-```
+```text
 Retry 1: 1000ms  (minDelay)
 Retry 2: 1300ms  (1000 * 1.3)
 Retry 3: 1690ms  (1300 * 1.3)
