--- a/docs/src/pages/index.mdx
+++ b/docs/src/pages/index.mdx
@@ -33,7 +33,7 @@ bun add @mdrv/wsx zod cbor-x elysia
 
 ```typescript
 // events.ts
-import { defineEvents } from '@mdrv/wsx/v001/shared'
+import { defineEvents } from '@mdrv/wsx/shared'
 import { z } from 'zod'
 
 export const events = defineEvents({
@@ -52,7 +52,7 @@ export const events = defineEvents({
 
 ```typescript
 // server.ts
-import { createElysiaWS } from '@mdrv/wsx/v001/server'
+import { createElysiaWS } from '@mdrv/wsx/server'
 import { Elysia } from 'elysia'
 import { events } from './events'
 
@@ -75,7 +75,7 @@ new Elysia()
 
 ```typescript
 // client.ts
-import { createClient } from '@mdrv/wsx/v001/client'
+import { createClient } from '@mdrv/wsx/client'
 import { events } from './events'
 
 const client = createClient('ws://localhost:3000/ws', events, {
